--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
 
     <nav>
-        <a href="beranda.html">Beranda</a> |
+        <a href="index.html">index</a> |
         <a href="profil.html">Profil</a>
     </nav>
 </body>
