--- a/profil.html
+++ b/profil.html
@@ -72,7 +72,7 @@
     </div>
 
     <nav>
-        <a href="beranda.html">Beranda</a> |
+        <a href="index.html">index</a> |
         <a href="profil.html">Profil</a>
     </nav>
 </body>
